@@ -35,6 +35,16 @@ function data:extend(t)
 	end
 end
 
+function data.extend(self, otherdata)
+	if self ~= data and otherdata == nil then
+		otherdata = self
+	end
+	for i=1,#otherdata do
+		local prototype = otherdata[i];
+		dataAdd(prototype.type, prototype.name, prototype);
+	end
+end
+
 local raw_log = _G.raw_log;
 _G.raw_log = nil;
 function log(s)
